--- a/index.html
+++ b/index.html
@@ -4,9 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css"
     <title>Document</title>
+
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/BIT_Logo_Stacked.jpg" alt="BloomTech Logo">
+            </div>
+            <div class="links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#">Courses</a>
+                <a href="#">Apply</a>
+            </div>
+        </nav>
+    </header>
+    <section id="home">
+        <div>
+            <img src="images/BIT_Logo_Stacked.jpg" alt="BloomTech Logo">
+            <h1>Your New Tech Career<br> Starts Here!</h1>
+            <button>Apply Now</button>
+        </div>
+    </section>
+    <section id="about">
+        <div class="left">
+            <img src="images/aboutimg.jpg" alt="BloomTech learner studying code on a screen">
+        </div>
+        <div class="right">
+            <div class="text">
+                <h2>About</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quo nostrum asperiores magni aliquam enim commodi iusto quasi beatae reprehenderit, sint quidem atque ipsa sunt veniam numquam omnis, sapiente ab!
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="programs">
+        <h2>Our programs</h2>
+            <div class="container">
+                <div class="box">
+                    <h3>Full Stack</h3>
+                    <button>Learn More</button>
+                </div>
+                <div class="box">
+                    <h3>Backend Development</h3>
+                    <button>Learn More</button>
+                </div>
+                <div class="box">
+                    <h3>Data Science</h3>
+                    <button>Learn More</button>
+                </div>
+                <div class="box">
+                    <h3>Web3</h3>
+                    <button>Learn More</button>
+                </div>
+            </div>
+    </section>
+    <section id="apply">
+        <h2>Ready to Launch Your New<br> Career in Tech?</h2>
+        <form action="">
+            <label for="firstname">First Name</label>
+            <input type="text" name="firstname">
+            <label for="lastname">Last Name</label>
+            <input type="text" name ="lastname">
+            <label for="email">Email <Address></Address></label>
+            <input type="email" name="email">
+            <label for="essay">Tell Us Why You Would Be A Good Fit For BloomTech</label>
+            <textarea name="essay" id="" cols="30" rows="10"></textarea>
+            <button class="formbtn">Apply Now</button>
+        </form>
+    </section>
+    <footer>
+        <div class="info">
+            <h3>Contact Us</h3>
+            <a href="mailto:info@bloomtech.com">info@bloomtech.com</a>
+            <a href="tel:1-888-888-8888">1-888-8888</a>
+        </div>
+        <div class="nav">
+            <nav>
+                <img src="images/BIT_Icon_White.png" alt="BloomTech Logo">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#">Courses</a>
+                <a href="#">Apply</a>
+            </nav>
+        </div>
+        <div class="copyright">
+            <p>Copyright BloomTech 2021</p>
+        </div>
+    </footer>
+    </body>
+    </html>
